--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^1.10.0",
     "body-parser": "^1.15.2",
     "connect-history-api-fallback": "^1.3.0",
     "connect-mongo": "^1.3.2",
