--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.1.0",
     "mongodb": "^2.2.5",
     "morgan": "^1.7.0",
+    "rc-queue-anim": "^0.12.4",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
