--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "gonghao's blog",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dll": "webpack --config=webpack.dll.config.js",
-    "dev": "NODE_ENV=development & nodemon app.js",
-    "dev2": "NODE_ENV=development webpack-dashboard -- nodemon app.js"
+    "dev": "cross-env NODE_ENV=development nodemon app.js",
+    "dashboard": "cross-env NODE_ENV=development webpack-dashboard -- nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -51,6 +50,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
+    "cross-env": "^2.0.1",
     "css-loader": "^0.23.1",
     "eslint": "^3.1.1",
     "eslint-config-airbnb": "^9.0.1",
