--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rc-queue-anim": "^0.12.4",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-markdown2": "^0.10.57",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.0",
     "redux": "^3.5.2",
@@ -61,9 +62,11 @@
     "file-loader": "^0.9.0",
     "html-webpack-harddisk-plugin": "0.0.2",
     "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "marked": "^0.3.6",
+    "node-sass": "^3.10.0",
     "postcss": "^5.1.1",
     "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
@@ -71,12 +74,15 @@
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
+    "sass": "^0.5.0",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dashboard": "^0.1.8",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-sources": "^0.1.2"
   }
 }
