--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "qiniu": "^6.1.11",
     "rc-queue-anim": "^0.12.4",
     "react": "^15.2.1",
+    "react-addons-pure-render-mixin": "^15.3.2",
     "react-dom": "^15.2.1",
     "react-markdown2": "^0.10.57",
     "react-redux": "^4.4.5",
