--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "postcss": "^5.1.1",
     "postcss-cssnext": "^2.7.0",
     "postcss-loader": "^0.9.1",
+    "react-addons": "^0.9.1-deprecated",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
