--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "body-parser": "^1.15.2",
     "connect-history-api-fallback": "^1.3.0",
     "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "editor.md": "^1.5.0",
     "ejs": "^2.5.1",
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "express-history-api-fallback": "^2.0.0",
-    "express-session": "^1.14.0",
+    "express-session": "^1.14.1",
     "file-stream-rotator": "0.0.7",
     "highlight.js": "^9.6.0",
     "jquery": "^3.1.0",
