--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dll": "webpack --config=webpack.dll.config.js",
     "dev": "cross-env NODE_ENV=development nodemon app.js",
-    "dashboard": "cross-env NODE_ENV=development webpack-dashboard -- nodemon app.js"
+    "dashboard": "cross-env NODE_ENV=development webpack-dashboard -- nodemon app.js",
+    "webpack": "cross-env NODE_ENV=development webpack-dev-server --progress --colors"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,7 @@
     "jquery": "^3.1.0",
     "mongodb": "^2.2.5",
     "morgan": "^1.7.0",
+    "parseurl": "^1.3.1",
     "qiniu": "^6.1.11",
     "rc-queue-anim": "^0.12.4",
     "react": "^15.2.1",
